tests/Core/negative/parsing/test009.jvc
def Unit := 0;

type Unit {
  unit : Unit;
};
